--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="/Users/apple/Desktop/snapshot-for-your-spirit/style.css">
     <meta charset="utf-8">
     <title>Snapshot For Your Spirit</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.9.0/d3.min.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
   </head>
   <body>
     <h1 class="head">Snapshot For Your Spirit</h1>
@@ -13,13 +16,18 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <h3>Choose your mood!</h3>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <button type="submit" class="btn" id="btn1">happy</button>
-    <button type="submit" class="btn" id="btn2">sad</button>
-    <button type="submit" class="btn" id="btn3">upset</button>
-    <article class="quotations"></article>
+    <button type="button" class="btn" id="btnone">happy</button>
+    <button type="button" class="btn" id="btntwo">sad</button>
+    <button type="button" class="btn" id="btnthree">upset</button>
+    </div>
+  <article class="quoteImg">
+<!-- This section is blank -->
+  </article>
+<div class="body">
   <h2>Why?</h2>
       <p></p>
-  </div>
-  <script src="/Users/apple/Desktop/snapshot-for-your-spirit/index.js"</script>
+</div>
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
   </body>
 </html>
