--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/Users/apple/Desktop/snapshot-for-your-spirit/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Snapshot For Your Spirit</title>
     <script
