Media query and finalized CSS

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <h3>Choose your mood!</h3>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <button type="button" class="btn" id="btnone">happy</button>
-    <button type="button" class="btn" id="btntwo">sad</button>
-    <button type="button" class="btn" id="btnthree">upset</button>
+    <div class="align">
+    <button class="btn" id="btnone">happy</button>
+    <button class="btn" id="btntwo">sad</button>
+    <button class="btn" id="btnthree">upset</button>
+    </div>
     </div>
   <article class="quoteImg">
 <!-- This section is blank -->
