Attempt at Music addition

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Snapshot For Your Spirit</title>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
   </head>
   <body>
@@ -21,10 +19,13 @@
     <button class="btn" id="btntwo">sad</button>
     <button class="btn" id="btnthree">upset</button>
     </div>
-    </div>
+  </div>
   <article class="quoteImg">
 <!-- This section is blank -->
   </article>
+  <audio>
+    <!-- Empty for the sources -->
+  </audio>
 <div class="body">
 </div>
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
